--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
 
 <!-- No need to change anything here -->
-<<meta property=”og:type” content=”article” />
+<meta property="og:type" content="article" />
 
 <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
 <meta property="og:image:width" content="310">
@@ -66,7 +66,7 @@
 </head>
 
 <body style="height: 100%;">
-    <img src=”https://chrispschan.github.io/mstile-310x310.png”/>
+    <img src="https://chrispschan.github.io/mstile-310x310.png"/>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
         <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
