--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="article" />
-
-<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
-<meta property="og:image:width" content="310">
-<meta property="og:image:height" content="310">
+<meta property="og:image" content=""/>
 
 <!-- Website to visit when clicked in fb or WhatsApp-->
-<meta property="og:url" content="https://chrispschan.github.io" />
+<meta property="og:url" content="" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
